--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,6 +1,7 @@
 body {
     font-size: 1.6rem;
     font-family: 'Lato', sans-serif;
+    overflow-x: hidden;
 }
 
 
@@ -8,7 +9,7 @@ body {
 /* APP TITLE */
 
 .title {
-    margin: 15vh auto 5vh 46%;
+    margin: 15vh auto 5vh 50%;
     text-align: center;
     padding: .5rem;
     transform: translateX(-50%);
