--- a/sass/components/_todo.scss
+++ b/sass/components/_todo.scss
@@ -4,7 +4,7 @@
 
     width: 40rem;
     background-color: $color-gray-light;
-    margin-left: 46%;
+    margin-left: 50%;
     transform: translateX(-50%);
     border-radius: .3rem;
     box-shadow: $shadow;
